# habi2ca

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  cloudbuild.yaml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
docker/: README.md  backend.dockerfile  compose.yaml  frontend.dockerfile
gamedata/: levels.json
habi2ca-cli/: Cargo.toml
habi2ca-common/: Cargo.toml
habi2ca-common/src/: lib.rs  player.rs  task.rs
habi2ca-database/: Cargo.toml
habi2ca-database/src/: habit.rs  level.rs  lib.rs  migration.rs  player.rs  prelude.rs  task.rs
habi2ca-database/src/migration/: m20240727_133538_initial.rs  m20240730_133138_level.rs
habi2ca-frontend/: Cargo.toml  Dioxus.toml  eslint.config.js  habi2ca-theme.ts  index.html  package-lock.json  package.json  tailwind.config.ts
habi2ca-frontend/src/: app.css  app.html  application.rs  application_old.rs  global.d.ts  main.rs
habi2ca-frontend/src/lib/: Modal.svelte  Title.svelte  base.ts  habit.ts  level.ts  player.ts  task.ts
habi2ca-frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  PlayerCreationDialog.svelte  TaskCreationDialog.svelte  playerInfo.ts
habi2ca-frontend/src/routes/api/[...api_slug]/: +server.ts
habi2ca-frontend/src/routes/player/[playerId]/: +page.server.ts  +page.svelte
habi2ca-frontend/src/routes/players/[playerId]/: +page.server.ts  +page.svelte  HabitCreationDialog.svelte  TaskCreationDialog.svelte
habi2ca-frontend/tests/: test.ts
habi2ca-ops/: Cargo.toml
habi2ca-ops/src/: backend.rs  docker.rs  frontend.rs  lib.rs  main.rs  test.rs  utils.rs
habi2ca-server/: Cargo.toml
habi2ca-server/src/: cli.rs  database.rs  database_utils.rs  frontend.rs  logging.rs  logic.rs  main.rs  routes.rs  start.rs  state.rs  table_definitions.rs  test.rs  test_utils.rs  tracing.rs
habi2ca-server/src/database/: player.rs  tasks.rs
habi2ca-server/src/logic/: habit.rs  level.rs  player.rs  task.rs
habi2ca-server/src/routes/: admin.rs  habits.rs  levels.rs  players.rs  tasks.rs
