[workspace]
members = [
    "habi2ca-server",
    "habi2ca-ops",
    "habi2ca-database",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
clap = {version = "4.5.7", features = ["derive"]}
actix-web = "4.7.0"
actix-service = "2.0.2"
actix-http = "3.7.0"
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"] }
actix-files = "0.6.6"
env_logger = "0.11.5"

sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }