[workspace]
members = ["habi2ca-server", "habi2ca-ops", "habi2ca-database"]
resolver = "2"

[workspace.lints.clippy]
bool_assert_comparison = "allow"

[workspace.dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
clap = {version = "4.5.7", features = ["derive"]}
actix-web = "4.7.0"
actix-service = "2.0.2"
actix-http = "3.7.0"
actix-files = "0.6.6"
tokio = {version = "1.38.0", features = ["macros", "rt-multi-thread"]}
env_logger = "0.11.5"
sea-orm = {version = "1.1.0", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros"
]}
sea-orm-migration = {version = "1.1.0", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite"
]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["registry"]}
tracing-appender = "0.2.3"
