[package]
name = "habi2ca-frontend"
version = "0.0.0"
edition = "2021"

[dependencies]
habi2ca-common = { version = "0.0.0", path = "../habi2ca-common" }
serde_json.workspace = true
clap.workspace = true

anyhow.workspace = true

rand.workspace = true
getrandom = { version = "0.2", features = ["js"] }

yew = { version = "0.21.0", features = ["csr"] }
reqwest.workspace = true
web-sys = {version="0.3.67", features = ["Window", "Location"], optional=true }
wasm-bindgen-futures = "0.4.42"

[features]
web = ["dep:web-sys"]
