[package]
name = "habi2ca-server"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-service.workspace = true
actix-http.workspace = true
anyhow.workspace = true
habi2ca-common = { version = "0.0.0", path = "../habi2ca-common" }
thiserror.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
env_logger.workspace = true
log.workspace = true
