[package]
name = "habi2ca-server"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-service.workspace = true
actix-http.workspace = true
anyhow.workspace = true
habi2ca-common = { version = "0.0.0", path = "../habi2ca-common", features = ["sql"] }
thiserror.workspace = true
tokio.workspace = true
tokio-rusqlite.workspace = true
serde_json.workspace = true
actix-files.workspace = true
clap.workspace = true
env_logger.workspace = true