[package]
name = "habi2ca-server"
version = "0.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
habi2ca-database = { version = "0.0.0", path = "../habi2ca-database"}

actix-web.workspace = true
actix-service.workspace = true
actix-http.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
actix-files.workspace = true
clap.workspace = true
env_logger.workspace = true

sea-orm.workspace = true